added iframe and updated nav

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,13 @@
     <title>Milestone One Registration</title>
   </head>
   <body>
+    <iframe 
+    src="https://milestonetwo-6ec19.web.app/" 
+    width="100%" 
+    height="500px" 
+    style="border: none;" 
+    title="Example Iframe">
+  </iframe>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
