--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
     src="https://milestonetwo-6ec19.web.app/" 
     width="100%" 
     height="500px" 
-    style="border: none;" 
+    style="border: 2rem;" 
     title="Example Iframe">
   </iframe>
     <div id="root"></div>
