--- a/client/index.html
+++ b/client/index.html
@@ -20,9 +20,9 @@
   <body>
     <iframe 
     src="https://milestonetwo-6ec19.web.app/" 
-    width="100%" 
+    width="50%" 
     height="500px" 
-    style="border: 2rem;" 
+    style="border: 2rem; border-color: black;" 
     title="Example Iframe">
   </iframe>
     <div id="root"></div>
