--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
     height="500px" 
     style="border: 2rem; border-color: black;" 
     title="Example Iframe">
+    This is iframe
   </iframe>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
