--- a/client/index.html
+++ b/client/index.html
@@ -20,9 +20,9 @@
   <body>
     <iframe 
     src="https://milestonetwo-6ec19.web.app/" 
-    width="50%" 
+    width="100%" 
     height="500px" 
-    style="border: 2rem; border-color: black;" 
+    style="border: 2rem; border-color: black; background: beige" 
     title="Example Iframe">
     This is iframe
   </iframe>
