--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
     src="https://milestonetwo-6ec19.web.app/" 
     width="100%" 
     height="500px" 
-    style="border: 2rem; border-color: black; background: beige" 
+    style="border: 2rem solid black; background: beige;" 
     title="Example Iframe">
     This is iframe
   </iframe>
